--- a/examples/options-scanner.html
+++ b/examples/options-scanner.html
@@ -111,8 +111,7 @@ Element `option-settings`
 
 
 
-<a id=view></a>
-<options-scanner view>
+<options-scanner view id=search>
 
 <table>
   <thead>
@@ -138,7 +137,6 @@ options-scanner table {
 options-scanner table tr { background: yellow; width: 100vw; display: flex; }
 options-scanner table td { background: blue; display: inline-block; flex: 1; outline: 1px solid rgba(255,255,255,0.5); }
 </style>
-
 
 <script>
 
