Update dependencies for examples/hello-world.html

--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -15,8 +15,9 @@
 
 </style>
 
-<script async src=webcomponents-hi-ce.js></script>
-<script async src=../dist/snuggsi.es></script>
+<script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule    src=//unpkg.com/snuggsi/snuggsi.js></script>
+<script type=module src=//unpkg.com/snuggsi/snuggsi.es></script>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
