--- a/examples/infinity-calendar.html
+++ b/examples/infinity-calendar.html
@@ -11,8 +11,9 @@
 
 </style>
 
-<script src=webcomponents-hi-ce.js></script>
-<script src=../dist/snuggsi.es defer></script>
+<script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule    src=//unpkg.com/snuggsi/snuggsi.js></script>
+<script type=module src=//unpkg.com/snuggsi/snuggsi.es></script>
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
