Remove stale code

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script src=webcomponents-hi-ce.js></script>
-<script src=../dist/snuggsi.es defer></script>
+<script type=module src=//unpkg.com/snuggsi/snuggsi.es></script>
+<script nomodule    src=//unpkg.com/snuggsi/snuggsi.js></script>
+<script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
 
