Start implementing Angular 2 Benchmark

--- a/benchmarks/properties/index.html
+++ b/benchmarks/properties/index.html
@@ -21,7 +21,7 @@
     packages: {'app': {defaultExtension: 'ts'}},
     map: { 'app': './angular2' }
   });
-  System.import('app/properties-angular')
+  System.import('app/main')
         .then(null, console.error.bind(console));
 </script>
 
