More implementing Angular 2 Benchmark

--- a/benchmarks/properties/index.html
+++ b/benchmarks/properties/index.html
@@ -68,7 +68,7 @@
 
   <pre>
   <code class=html>
-  &lt;snuggsi-form&gt;
+  &lt;properties-snuggsi&gt;
 
     &lt;form action=#&gt;
       &lt;label&gt;First Name &lt;input name=first value=John&gt;&lt;/label&gt;
@@ -76,11 +76,11 @@
       &lt;label&gt;Full Name  &lt;output&gt;&#123;full&#125;&lt;/output&gt;&lt;/label&gt;
     &lt;/form&gt;
 
-  &lt;/snuggsi-form&gt;
+  &lt;/properties-snuggsi&gt;
   </code>
 
   <code class=es>
-  Element `snuggsi-form`
+  Element `properties-snuggsi`
 
   (class extends HTMLElement {
 
@@ -97,7 +97,7 @@
   </code>
   </pre>
 
-  <snuggsi-form>
+  <properties-snuggsi>
 
 
     <form action=#>
@@ -107,7 +107,7 @@
     </form>
 
   <script nomodule defer>
-  Element `snuggsi-form`
+  Element `properties-snuggsi`
 
   (class extends HTMLElement {
 
@@ -123,11 +123,11 @@
   })
   </script>
 
-  </snuggsi-form>
+  </properties-snuggsi>
   </section>
 
   <section class=angular2>
-    <my-app>Loading...</my-app>
+    <properties-angular2>Loading...</properties-angular2>
   </section>
 </section>
 
