Remove undefined value for file list

--- a/examples/file-upload.html
+++ b/examples/file-upload.html
@@ -67,7 +67,7 @@ Element `file-upload`
   }
 
   get files ()
-    { return this.context.files [0] }
+    { return this.context.files }
 })
 
 </script>
