Support for multiple files

--- a/examples/file-upload.html
+++ b/examples/file-upload.html
@@ -15,8 +15,8 @@
 
 <file-upload>
 
-  <input multiple id=upload name=upload type=file>
-  <label for=upload>Click to upload file...</label>
+  <input multiple id=files name=files[] type=file>
+  <label for=files>Click to upload file...</label>
 
   <ul>
     <template name=files>
