--- a/examples/add-subtract.html
+++ b/examples/add-subtract.html
@@ -5,9 +5,9 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule    src=//unpkg.com/snuggsi/snuggsi.js></script>
-<script type=module src=//unpkg.com/snuggsi/snuggsi.es></script>
+<script nomodule    src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule    src=http://unpkg.com/snuggsi/snuggsi.js></script>
+<script type=module src=http://unpkg.com/snuggsi/snuggsi.es></script>
 
 <hgroup>
   <h1>snuggsi ツ</h1>
