--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -5,8 +5,9 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script async src=/examples/webcomponents-hi-ce.js></script>
-<script async src=../dist/snuggsi.es></script>
+<script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
+<script nomodule    src=https://unpkg.com/snuggsi/snuggsi.js></script>
+<script nomodule    src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 
 <link rel=icon type=image/png href=../public/favicon-32x32.png sizes=32x32>
 <link rel=icon type=image/png href=../public/favicon-16x16.png sizes=16x16>
