Update error for standalone

--- a/examples/file-upload.html
+++ b/examples/file-upload.html
@@ -5,8 +5,8 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script nomodule    src=//unpkg.com/snuggsi/snuggsi.js></script>
-<script nomodule    src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule    src=https://unpkg.com/snuggsi/snuggsi.js></script>
+<script nomodule    src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 
 <hgroup>
   <h1>snuggsi ツ</h1>
