Update Web Workers

--- a/benchmarks/workers.html
+++ b/benchmarks/workers.html
@@ -1,5 +1,11 @@
-<h1>Web Workers</h1>
+<title>snuggsi ツ - Web Workers</title>
 
-<h2>Harness</h2>
+<meta charset=UTF-8>
+<meta name=viewport content=width=device-width,initial-scale=1>
+
+<hgroup>
+  <h1>Web Workers</h1>
+  <h2>Harness</h2>
+</hgroup>
 
 <a href=https://testdrive-archive.azurewebsites.net/HTML5/WebWorkerTest262>Web Worker Harness</a>
