--- a/benchmarks/workers.html
+++ b/benchmarks/workers.html
@@ -3,6 +3,12 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
+<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+
+<script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
+<script nomodule    src=https://unpkg.com/snuggsi/snuggsi.js></script>
+<script nomodule    src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+
 <hgroup>
   <h1>Web Workers</h1>
   <h2>Harness</h2>
