Add examples/party-line.html for skype/hangouts clone

--- a/examples/party-line.html
+++ b/examples/party-line.html
@@ -14,7 +14,17 @@
   <h2>Skype / Hangouts Clone</h2>
 </hgroup>
 
-<party-line></party-line>
+<party-line>
+  <section id=messages>
+    <template name=message>
+    </template>
+  </section>
+
+  <footer>
+    <textarea name=message></textarea>
+    <button type=submit>Send</button>
+  </footer>
+</party-line>
 
 <script src=../../vendor/browser-sync.es></script>
 
