Update dependencies for example/filter.html

--- a/examples/filter.html
+++ b/examples/filter.html
@@ -5,12 +5,15 @@
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
-<script src=../elements/template.es></script>
+<script type=module src=https://unpkg.com/snuggsi/snuggsi.es></script>
+<script nomodule src=https://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script nomodule src=https://unpkg.com/snuggsi/snuggsi.js></script>
 
-<script src=../elements/global-event-handlers.es></script>
-<script src=../elements/parent-node.es></script>
-<script src=../elements/event-target.es></script>
-<script src=../elements/element.es></script>
+
+<hgroup>
+  <h1>snuggsi ツ</h1>
+  <h2>Filter</h2>
+</hgroup>
 
 <p>
   This is a refactor of
